this is Standard Curriculum section

--- a/index.html
+++ b/index.html
@@ -51,10 +51,6 @@
     
                 </div>
 
-                <!-- <div class="menu-bar">
-                    <i class="fa-solid fa-bars"></i>
-                </div> -->
-
             </section>
             
             <section class="banner container">
@@ -88,7 +84,71 @@
 
         </header>
 
-        <main>
+        <main class="main container">
+
+            <section class="standard-curriculum primary-paragraph">
+
+                <h1 class="standard-curriculum-title"> Standard Curriculum </h1>
+
+                <div class="standard-curriculum-cards primary-paragraph">
+
+                    <div class="standard-curriculum-card">
+
+                        <img src="assets/kinder.png" alt="">
+
+                        <h3 class="box-title"> Kinder (3-6) Years </h3>
+
+                        <p class="box-description"> Cum sociis natoque penatibus et magnis
+                            dis parturient montes, nascetur ridiculus
+                            mu sdis parturient 
+                        </p>
+
+                        <a href="">Read more</a>
+
+                    </div>
+
+                    <div class="standard-curriculum-card">
+
+                        <img src="assets/elementary.png" alt="">
+
+                        <h3 class="box-title"> Kinder (3-6) Years </h3>
+
+                        <p class="box-description"> Cum sociis natoque penatibus et magnis
+                            dis parturient montes, nascetur ridiculus
+                            mu sdis parturient 
+                        </p>
+
+                        <a href="">Read more</a>
+
+                    </div>
+
+                    <div class="standard-curriculum-card">
+
+                        <img src="assets/middle.png" alt="">
+
+                        <h3 class="box-title"> Kinder (3-6) Years </h3>
+
+                        <p class="box-description"> Cum sociis natoque penatibus et magnis
+                            dis parturient montes, nascetur ridiculus
+                            mu sdis parturient 
+                        </p>
+
+                        <a href="">Read more</a>
+
+                    </div>                  
+
+                </div>
+
+                <div class="arrow-box">
+
+                    <ul>
+                        <li><i class="fa-solid fa-angle-left""></i></li>
+                        <li><i class="fa-solid fa-angle-right"></i></li>
+                    </ul>
+
+                </div>
+
+            </section>
 
         </main>
 
