--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 
         </header>
 
-        <main class="main container">
+        <main class="main">
 
-            <section class="standard-curriculum primary-paragraph">
+            <section class="standard-curriculum primary-paragraph container">
 
                 <h1 class="standard-curriculum-title"> Standard Curriculum </h1>
 
@@ -147,6 +147,82 @@
                     </ul>
 
                 </div>
+
+            </section>
+
+            <section class="our-stories">
+
+                <h1 class="our-stories-title">Our Stories</h1>
+
+                <div class="our-stories-cards">
+
+                    <div class="big-card">
+
+                        <img src="assets/story-1.png" alt="">
+
+                        <p class="date">November 19, 2019</p>
+
+                        <div class="bog-card-content">
+
+                            <h3 class="big-card-title">A fun toddler coloring training on classroom</h3>
+
+                        <p class="big-card-description">
+                            Beautiful branding for changes by Never Now in Australia.
+                            changes is a platform for open discussion in an inclusive and
+                            collaborative environment, providing the...
+                        </p>
+
+                        </div>                        
+
+                    </div>
+
+                    <div class="smalls-cards">
+
+                        <div class="small-card">
+
+                            <img src="assets/story-2.png" alt="">
+
+                            <div class="date">November 19, 2019</div>
+
+                        <h5 class="small-card-title">Find out if a school fits the family’s needs</h5>
+
+                        </div>
+
+                        <div class="small-card">
+
+                            <img src="assets/story-3.png" alt="">
+
+                            <div class="date">November 19, 2019</div>
+
+                        <h5 class="small-card-title">Find out if a school fits the family’s needs</h5>
+
+                        </div>
+
+                        <div class="small-card">
+
+                            <img src="assets/story-4.png" alt="">
+
+                            <div class="date">November 19, 2019</div>
+
+                        <h5 class="small-card-title">Find out if a school fits the family’s needs</h5>
+
+                        </div>
+
+                        <div class="small-card">
+
+                            <img src="assets/story-5.png" alt="">
+
+                            <div class="date">November 19, 2019</div>
+
+                        <h5 class="small-card-title">Find out if a school fits the family’s needs</h5>
+
+                        </div>
+
+                    </div>                   
+
+                </div>
+
+                <button class="primary-btn">View All</button>
 
             </section>
 
